financials-mongo-db.yml
# Deployment

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: financials-mongo-db
  name: financials-mongo-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: financials-mongo-db
    spec:
      containers:
      - image: mongo
        name: financials-mongo-db
        ports:
        - name: financials-mongo-db
          containerPort: 27017
          hostPort: 27017
      restartPolicy: Always

# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    run: financials-mongo-db-svc
  name: financials-mongo-db-svc
spec:
  clusterIP: None
  ports:
  - name: financials-mongo-db
    port: 27017
    targetPort: 27017
  selector:
    run: financials-mongo-db
