ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: financials-ms-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /$KUBERNETES_NAMESPACE/app/
        backend:
          serviceName: financials-ms-exposed
          servicePort: 7777
